@@ -8,6 +8,7 @@ Added machine Timex TC2048
 Added disk image browsing from storage MMC/IDE menus
 Added PZX load support as standard tape
 Added TAP to PZX converter
+Added TAP to TZX turbo converter (TZX Turbo 4000 bauds, to use with Rodolfo Guerra ROMS)
 Added some actions than can be fired from command line and don't start ZEsarUX:
 --convert-tap-tzx, --convert-tap-pzx , --convert-tzx-tap, --convert-pzx-tap
 
